--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,5 @@ include AUTHORS
 include LICENSE
 include README.rst
 #recursive-include docs *
+recursive-include galeria/locale *
 recursive-include galeria/templates *
